<?xml version="1.0"?>
<package>
  <name>cluster_extraction</name>
  <version>0.0.0</version>
  <description>The cluster_extraction package</description>

  <maintainer email="ksatyaki@gmail.com">Chittaranjan Srinivas Swaminathan</maintainer>

  <license>GPLv3</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
	  <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
